# etf_performance

./: README.md  pyproject.toml
etf_performance/: constants.py  etf.txt  main.py  module.py
tests/: report.html  test_get_us_etfs.py
