[tool.poetry]
name = "etf-performance"
version = "0.1.0"
description = ""
authors = ["Rodrigo Carvalho <rodrigofmcarvalho@gmail.com>"]
readme = "README.md"
packages = [{include = "etf_performance"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
holidays = "^0.30"
yfinance = "^0.2.28"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pip = "^23.2.1"
ipykernel = "^6.25.1"
isort = "^5.12.0"
blue = "^0.9.1"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
